# intent

./: .env.complete.example  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  DOCUMENTATION.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  example1_oneliner.py  example2_static_html.html  example3_docker_workflow.py  index.html  init.sql  intentforge.js  ollama_example.py  providers.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_models.py
config/: mosquitto.conf  nginx.conf
docker/: docker-compose.yml  nginx.conf
docker/config/: litellm_config.yaml  nginx.conf
docs/: ARCHITECTURE.md  COMPARISON.md  DOCUMENTATION.md  INDEX.md  api.md  architecture.md  dsl.md  services.md  setup.md  usage.md
examples/: 02_ebook_payment.html  04_realtime_dashboard.html  README.md  autodev_server.py  dev_workflow.py  example1_oneliner.py  example2_static_html.html  example3_docker_workflow.py  examples.py  server.py
examples/dsl/: 01_chat_example.dsl  02_analytics_example.dsl  02_import_example.dsl  03_autonomous_modules.dsl  03_voice_example.dsl  04_file_vision_example.dsl  05_workflow_example.dsl  README.md  utils.dsl
examples/python/: api_client_example.py  mqtt_realtime_example.py
examples/static/: form.html  intent.js  table.html
examples/usecases/: 01_contact_form.html  02_ebook_payment.html  03_camera_monitoring.html  04_realtime_dashboard.html  04_todo_app.html  05_chat_assistant.html  06_dashboard_analytics.html  07_iot_smart_home.html  08_file_upload.html  autodev_chat.html  index.html
frontend/: demo-zero-js.html  index.html
frontend/components/: intentforge-components.js
frontend/sdk/: intentforge.js
frontend/static/js/: paho-mqtt.js
generated_libs/: fibonacci.py
intentforge/: __init__.py  agent.py  autonomous.py  autoworker_agent.py  broker.py  cache.py  cli.py  code_runner.py  code_tester.py  config.py  conversation_engine.py  core.py  dsl.py  env_handler.py  executor.py  generator.py  git_manager.py  modules.py  patterns.py  plugins.py  proactive.py  sandbox_runner.py  schema_registry.py  server.py  service_tester.py  services.py  simple.py  validator.py  worker.py
intentforge/autoworker/: __init__.py  base.py  context.py  orchestrator.py
intentforge/llm/: __init__.py  providers.py
intentforge/static/js/: intentforge-client.js
modules/.template/: Dockerfile  main.py  module.yaml  requirements.txt
sdk/: intentforge.js
tests/: test_e2e_flow.py
tests/e2e/: conftest.py  test_config.py  test_frontend.py  test_services.py
tests/unit/: test_llm_providers.py
tests/unit/autoworker/: __init__.py
tests/validation/: __init__.py  test_autoworker_phases.py
